[package]
name = "ritelinked"
version = "0.2.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
description = "HashMap-like containers that hold their key-value pairs in a user controllable order"
repository = "https://github.com/ritedb/ritelinked"
documentation = "https://docs.rs/ritelinked"
readme = "README.md"
keywords = ["data-structures"]
license = "MIT OR Apache-2.0"

[features]
default = ["ahash", "inline-more-amortized"]

ahash-compile-time-rng = ["ahash_/compile-time-rng"]

ahash = [ "ahash_", "hashbrown/ahash" ]
serde = [ "serde_", "hashbrown/serde" ]
inline-more = [ "hashbrown/inline-more" ]

amortized = ["griddle"]
ahash-amortized = [ "ahash", "amortized", "griddle/ahash" ]
serde-amortized = [ "serde", "amortized", "griddle/serde" ]
inline-more-amortized = [ "inline-more", "amortized", "griddle/inline-more" ]

[dependencies]
# For the default hasher
ahash_ = { version = "0.6.1", default-features = false, optional = true, package = "ahash" }
hashbrown = { version = "0.9.1", default-features = false }
griddle = { version = "0.4.1", default-features = false, optional = true }
serde_ = { version = "1.0.25", default-features = false, optional = true, package = "serde" }

[dev-dependencies]
serde_test = "1.0"
